Release v1.0.0 - industry-grade overhaul (#100)